boot_log.txt
*** Error compiling 'c:\\Users\\aaron\\grace_2\\backend\\autonomy\\auto_extension_loop.py'...
  File "c:\Users\aaron\grace_2\backend\autonomy\auto_extension_loop.py", line 139
    print("   based on detected capability gaps and business needs.")
SyntaxError: expected 'except' or 'finally' block

*** Error compiling 'c:\\Users\\aaron\\grace_2\\backend\\models\\schemas_fixed.py'...
  File "c:\Users\aaron\grace_2\backend\models\schemas_fixed.py", line 380
    class PolicyListResponse(RootModel[List[PolicyResponse]]]):
                                                            ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('

*** Error compiling 'c:\\Users\\aaron\\grace_2\\backend\\triggers\\advanced_triggers.py'...
  File "c:\Users\aaron\grace_2\backend\triggers\advanced_triggers.py", line 529
    sig = f"{error_type}:{traceback_snippet.split('\n')[0][:100]}"
                                                                  ^
SyntaxError: f-string expression part cannot include a backslash

*** Error compiling 'c:\\Users\\aaron\\grace_2\\backend\\misc\\main_full.py'...
Sorry: IndentationError: unexpected indent (main_full.py, line 21)
[CONTROL-PLANE] ✗ coding_agent FAILED: No module named 'backend.agents_core.trigger_mesh'
[CONTROL-PLANE] ✗ coding_agent FAILED: No module named 'backend.agents_core.trigger_mesh'
[CONTROL-PLANE] ✗ coding_agent FAILED: No module named 'backend.agents_core.trigger_mesh'
[CONTROL-PLANE] ✗ coding_agent FAILED: No module named 'backend.agents_core.trigger_mesh'
[CONTROL-PLANE] ✗ governance FAILED: No module named 'backend.governance_system.models'
[CONTROL-PLANE] ✗ governance FAILED: No module named 'backend.governance_system.models'
[CONTROL-PLANE] ✗ governance FAILED: No module named 'backend.governance_system.models'
[CONTROL-PLANE] ✗ governance FAILED: No module named 'backend.governance_system.models'
[MEMORY_FUSION] Could not subscribe to logic updates: No module named 'backend.trigger_mesh'
error: unable to unlink old 'databases/grace.db': Invalid argument
fatal: Could not reset index file to revision 'cdfdd6dc211267094ba9683e4e2e6f06349b75cd'.
Git rollback failed: Command '['git', 'reset', '--hard', 'cdfdd6dc211267094ba9683e4e2e6f06349b75cd']' returned non-zero exit status 128.

================================================================================
GRACE - PRODUCTION BOOT ORCHESTRATOR
================================================================================

================================================================================
PHASE 0: Production Hardening
================================================================================
  [SNAPSHOT] Creating boot snapshot: boot_1763192169
    [OK] DB snapshot: boot_1763192169_db.sqlite
    [OK] Cache snapshot: boot_1763192169_cache
    [OK] Config hashes: 9 files
    [OK] Model hashes: 0 models

[SECURITY] ATTESTING SECRETS & CONFIGS
   [OK] Attested 7 secrets/configs

[SBOM] GENERATING SBOM
   [OK] Tracked 89 dependencies
   [SCAN] Checking for CVEs... [OK] No known vulnerabilities

   🛡️  Boot rate limiting: ENABLED

PHASE 1: Pre-flight health checks

================================================================================
🔍 PRE-FLIGHT HEALTH GATE
================================================================================
  Checking python_version... ✅ PASSED
  Checking pip_dependencies... ✅ PASSED
  Checking env_variables... ⚠️  WARNING
  Checking database_connectivity... ✅ PASSED
  Checking disk_space... ✅ PASSED
  Checking port_availability... ✅ PASSED
  Checking config_files... ✅ PASSED

  Results: 6 passed, 1 warnings, 0 failed
================================================================================

PHASE 2: Booting core infrastructure
[1/20] Message Bus: ACTIVE
[2/20] Immutable Log: ACTIVE

PHASE 3: Dependency-driven kernel boot

================================================================================
🚀 KERNEL BOOT - DEPENDENCY-DRIVEN
================================================================================

🔥 Pre-boot warmup...
  ⚡ Loading warm caches... ⚠️  No cache found (first boot)
  ⚡ Warming DB connections... ✅
  ⚡ Pre-fetching secrets... ✅ (0 secrets)
  ⚡ Checking compiled bytecode... ✅
  [core] Booting message_bus...   ✅ message_bus RUNNING
✅ READY
  [core] Booting immutable_log...   ✅ immutable_log RUNNING
✅ READY
  [core] Booting self_healing...   [core] Booting coding_agent...   [governance] Booting secret_manager...   ✅ self_healing RUNNING
  ✅ secret_manager RUNNING
✅ READY
✅ READY
⚠️  NO READINESS
  ⏳ Retry 1/3 in 1s... ⚠️  NO READINESS
  ⏳ Retry 2/3 in 2s... ⚠️  NO READINESS
  ⏳ Retry 3/3 in 4s... ⚠️  NO READINESS
  🔄 Attempting degraded mode... ✅ DEGRADED
  [governance] Booting governance...   [agentic] Booting agentic_spine...   ✅ agentic_spine RUNNING
✅ READY
⚠️  NO READINESS
  ⏳ Retry 1/3 in 1s... ⚠️  NO READINESS
  ⏳ Retry 2/3 in 2s... ⚠️  NO READINESS
  ⏳ Retry 3/3 in 4s... ⚠️  NO READINESS
  🔄 Attempting degraded mode... ✅ DEGRADED
  [governance] Booting verification_framework...   [execution] Booting memory_fusion...   [execution] Booting sandbox...   [agentic] Booting meta_loop...   [agentic] Booting voice_conversation...   ✅ verification_framework RUNNING
  ✅ memory_fusion RUNNING
  ✅ sandbox RUNNING
  ✅ meta_loop RUNNING
  ✅ voice_conversation RUNNING
✅ READY
✅ READY
✅ READY
✅ READY
✅ READY
  [execution] Booting librarian...   [services] Booting api_server...   ✅ librarian RUNNING
  ✅ api_server RUNNING
✅ READY
✅ READY

  ✅ Boot complete: 14 kernels, 0 failed
================================================================================

================================================================================
BOOT COMPLETE - 20 KERNELS
================================================================================

✅ Core & Repair Systems:
   message_bus, immutable_log, self_healing, coding_agent

✅ Governance:
   secret_manager, governance, verification_framework

✅ Execution:
   memory_fusion, librarian, sandbox

✅ Agentic:
   agentic_spine, meta_loop, voice_conversation

✅ Services:
   api_server, trigger_mesh, scheduler, health_monitor

================================================================================
  Total: 14/20 running
  Failed: 0
  System State: stopped
================================================================================

PHASE 4: Endpoint validation

================================================================================
🧪 PARALLEL VALIDATION HARNESS
================================================================================
  Testing GET http://localhost:8000/health... ❌ FAIL: All connection attempts failed
  Testing GET http://localhost:8000/api/health... ❌ FAIL: All connection attempts failed
================================================================================


PHASE 5: Contract tests

[TEST] RUNNING CONTRACT TESTS
============================================================
  Testing health_endpoint... [ERROR] ERROR: All connection attempts failed
  Testing api_health_endpoint... [ERROR] ERROR: All connection attempts failed
  Testing control_state_endpoint... [ERROR] ERROR: All connection attempts failed
  Testing coding_agent_model... [ERROR] FAIL
============================================================
[ERROR] CRITICAL TESTS FAILED - Blocking traffic
   Failed: health_endpoint, api_health_endpoint, control_state_endpoint, coding_agent_model


❌ CRITICAL CONTRACT TESTS FAILED
   Traffic BLOCKED for safety
   Failed tests: health_endpoint, api_health_endpoint, control_state_endpoint, coding_agent_model

   🔄 Rolling back to last snapshot...

[ROLLBACK] ROLLING BACK to boot_1763192169
   Timestamp: 2025-11-15 07:36:09.636225
   Git commit: cdfdd6dc211267094ba9683e4e2e6f06349b75cd
  [RESTORE] Rolling back database...
    [OK] Database restored
  [RESTORE] Rolling back caches...
    [OK] Caches restored
  [RESTORE] Rolling back code...
    [OK] Code restored

[OK] ROLLBACK COMPLETE
Failed to boot Layer 1. Exiting.
